refactor: change name

--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -2,7 +2,7 @@
   <div class="logo">
     <a class="text">
       <img class="logo-img" src="../../assets/img/main-logo.jpg" alt="" />
-      <p>Trade manager</p>
+      <p>Admin Panel</p>
     </a>
   </div>
   <ul>
