--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -1,7 +1,7 @@
 <div class="sidebar-wrapper">
   <div class="logo">
     <a class="text">
-      <img class="logo-img" src="../../assets/img/main-logo.jpg" alt="" />
+      <img class="logo-img" src="../../assets/img/main-logo.png" alt="" />
       <p>Admin Panel</p>
     </a>
   </div>
