--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -1,11 +1,12 @@
 .navbar-wrapper {
   font-size: 16px;
-  border-bottom: 1px solid rgba(128, 128, 128, 0.5);
+  background-color: rgb(49, 53, 61);
+  color: white;
   height: 74px;
 
   .settings {
     float: right;
-    color: #66615b;
+    color: white;
     text-decoration: none;
     font-size: 20px;
     margin-top: 23px;
