--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -39,7 +39,7 @@
           <span>General</span>
         </li>
         <li class="sidebar-dropdown">
-          <a href="#">
+          <a href="#/dashboard">
             <i class="fa fa-tachometer-alt"></i>
             <span>Dashboard</span>
             <span class="badge badge-pill badge-warning">New</span>
